--- a/custom/languages/vi.po
+++ b/custom/languages/vi.po
@@ -4,7 +4,7 @@ msgstr ""
 "POT-Creation-Date: 2024-12-18 20:53+0700\n"
 "PO-Revision-Date: 2024-12-18 20:58+0700\n"
 "Last-Translator: Cuong Lai Dinh <laidinhcuongvn@gmail.com>\n"
-"Language-Team: HocWP Team - hocwp.net@gmail.com - www.hocwp.net\n"
+"Language-Team: HocWP Team - laidinhcuongvn@gmail.com - www.ldcuong.com\n"
 "Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
