--- a/custom/languages/hocwp-theme-child.pot
+++ b/custom/languages/hocwp-theme-child.pot
@@ -1,5 +1,6 @@
 # Copyright (C) 2016 Automattic
 # This file is distributed under the GNU General Public License v2 or later.
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: "
@@ -10,30 +11,26 @@ msgstr ""
 "POT-Creation-Date: "
 "2025-11-21 12:05+0700\n"
 "PO-Revision-Date: "
-"2025-11-21 12:05+0700\n"
-"Last-Translator: Cuong "
-"Lai Dinh "
-"<laidinhcuongvn@gmail.com>\n"
+"2016-12-23 16:00+0100\n"
+"Last-Translator: \n"
 "Language-Team: HocWP "
 "Team - "
 "laidinhcuongvn@gmail.com "
 "- www.ldcuong.com\n"
-"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/"
 "plain; charset=UTF-8\n"
 "Content-Transfer-"
 "Encoding: 8bit\n"
 "Plural-Forms: "
-"nplurals=2; plural=(n !"
-"= 1);\n"
-"X-Generator: Poedit "
-"3.6\n"
+"nplurals=INTEGER; "
+"plural=EXPRESSION;\n"
+"X-Generator: Poedit 3.6\n"
 "X-Poedit-KeywordsList: "
 "__;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_ex:1,2c;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c\n"
 "X-Poedit-"
 "Basepath: ../..\n"
-"X-Poedit-"
-"SourceCharset: UTF-8\n"
+"X-Poedit-SourceCharset: "
+"UTF-8\n"
 "X-Poedit-"
 "SearchPath-0: .\n"
